--- a/Depo/LifeBox_Business/Presentation/UserStories/Others/PrivateShare/New Share/Views/ShareWith/PrivateShareWithView.xib
+++ b/Depo/LifeBox_Business/Presentation/UserStories/Others/PrivateShare/New Share/Views/ShareWith/PrivateShareWithView.xib
@@ -11,7 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="kav-8u-fNB" customClass="PrivateShareWithView" customModule="Billo" customModuleProvider="target">
+        <view contentMode="scaleToFill" id="kav-8u-fNB" customClass="PrivateShareWithView" customModule="lifeBox_Business" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="414" height="80"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -28,7 +28,7 @@
                     <rect key="frame" x="0.0" y="44" width="414" height="20"/>
                 </stackView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0up-yr-2e7">
-                    <rect key="frame" x="16" y="79" width="382" height="1"/>
+                    <rect key="frame" x="0.0" y="79" width="414" height="1"/>
                     <viewLayoutGuide key="safeArea" id="Kvu-oO-oSu"/>
                     <color key="backgroundColor" red="0.59215686270000001" green="0.59215686270000001" blue="0.59215686270000001" alpha="0.2972601232" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
@@ -46,8 +46,8 @@
                 <constraint firstAttribute="trailing" secondItem="Ejt-RW-Ffa" secondAttribute="trailing" constant="16" id="LZE-Xs-dYh"/>
                 <constraint firstItem="lUO-0C-FT7" firstAttribute="top" secondItem="Ejt-RW-Ffa" secondAttribute="bottom" constant="10" id="Lza-PA-kPs"/>
                 <constraint firstAttribute="bottom" secondItem="lUO-0C-FT7" secondAttribute="bottom" constant="16" id="SWJ-iq-rde"/>
-                <constraint firstAttribute="trailing" secondItem="0up-yr-2e7" secondAttribute="trailing" constant="16" id="ama-MZ-lnS"/>
-                <constraint firstItem="0up-yr-2e7" firstAttribute="leading" secondItem="kav-8u-fNB" secondAttribute="leading" constant="16" id="mST-eB-lRO"/>
+                <constraint firstAttribute="trailing" secondItem="0up-yr-2e7" secondAttribute="trailing" id="ama-MZ-lnS"/>
+                <constraint firstItem="0up-yr-2e7" firstAttribute="leading" secondItem="kav-8u-fNB" secondAttribute="leading" id="mST-eB-lRO"/>
                 <constraint firstItem="Ejt-RW-Ffa" firstAttribute="top" secondItem="kav-8u-fNB" secondAttribute="top" constant="18" id="nHo-pI-NNv"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
