--- a/Depo/LifeBox_Business/Presentation/UserStories/Others/FileInfo/View/Subviews/SharingInfo/FileInfoShareView.xib
+++ b/Depo/LifeBox_Business/Presentation/UserStories/Others/FileInfo/View/Subviews/SharingInfo/FileInfoShareView.xib
@@ -1,49 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="FileInfoShareView" customModule="Billo" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="145"/>
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="FileInfoShareView" customModule="lifeBox_Business" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="414" height="94"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NNg-u4-bc2">
-                    <rect key="frame" x="20" y="0.0" width="374" height="15"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="15" id="9BO-OI-Yvs"/>
-                    </constraints>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <nil key="textColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZlV-IR-S5u">
-                    <rect key="frame" x="0.0" y="144" width="414" height="1"/>
-                    <color key="backgroundColor" red="0.91764705879999997" green="0.91764705879999997" blue="0.91764705879999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="1" id="Gwp-q7-fpW"/>
-                    </constraints>
-                </view>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rkc-vj-8Hh">
-                    <rect key="frame" x="20" y="30" width="374" height="18"/>
+                    <rect key="frame" x="20" y="0.0" width="374" height="20"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="18" id="ufD-6w-RQa"/>
+                        <constraint firstAttribute="height" constant="20" id="ufD-6w-RQa"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="6Im-ez-OTx">
-                    <rect key="frame" x="16" y="62" width="353" height="67"/>
+                    <rect key="frame" x="16" y="35" width="353" height="59"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="67" id="pOD-Jt-52r"/>
+                        <constraint firstAttribute="height" constant="59" id="pOD-Jt-52r"/>
                     </constraints>
                     <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="hFE-iM-gYF">
                         <size key="itemSize" width="128" height="128"/>
@@ -53,7 +37,7 @@
                     </collectionViewFlowLayout>
                 </collectionView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="snf-Ja-seM">
-                    <rect key="frame" x="369" y="62" width="45" height="45"/>
+                    <rect key="frame" x="369" y="35" width="45" height="45"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="45" id="Gkx-Q2-zTO"/>
                         <constraint firstAttribute="width" constant="45" id="UaF-IU-SUZ"/>
@@ -68,18 +52,12 @@
             <constraints>
                 <constraint firstItem="6Im-ez-OTx" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="16" id="26P-ZU-hVz"/>
                 <constraint firstAttribute="trailing" secondItem="Rkc-vj-8Hh" secondAttribute="trailing" constant="20" id="4dP-5S-tGR"/>
-                <constraint firstItem="6Im-ez-OTx" firstAttribute="top" secondItem="Rkc-vj-8Hh" secondAttribute="bottom" constant="14" id="9Q8-uL-zpo"/>
-                <constraint firstItem="NNg-u4-bc2" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="CP9-Pu-tK9"/>
-                <constraint firstItem="ZlV-IR-S5u" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="KfZ-HC-zm6"/>
-                <constraint firstItem="NNg-u4-bc2" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" id="OQi-B5-pwk"/>
+                <constraint firstItem="Rkc-vj-8Hh" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="8iT-Y6-XIK"/>
+                <constraint firstItem="6Im-ez-OTx" firstAttribute="top" secondItem="Rkc-vj-8Hh" secondAttribute="bottom" constant="15" id="9Q8-uL-zpo"/>
                 <constraint firstAttribute="trailing" secondItem="snf-Ja-seM" secondAttribute="trailing" id="aUw-Yu-ZIA"/>
                 <constraint firstItem="snf-Ja-seM" firstAttribute="top" secondItem="6Im-ez-OTx" secondAttribute="top" id="bq0-g0-hdt"/>
-                <constraint firstItem="Rkc-vj-8Hh" firstAttribute="top" secondItem="NNg-u4-bc2" secondAttribute="bottom" constant="15" id="eac-Jz-q1M"/>
-                <constraint firstAttribute="bottom" secondItem="ZlV-IR-S5u" secondAttribute="bottom" id="f6U-7j-IFS"/>
+                <constraint firstAttribute="bottom" secondItem="6Im-ez-OTx" secondAttribute="bottom" id="fgf-6e-mhr"/>
                 <constraint firstItem="Rkc-vj-8Hh" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" id="hj0-u1-4kV"/>
-                <constraint firstAttribute="trailing" secondItem="ZlV-IR-S5u" secondAttribute="trailing" id="jvi-wG-Zm7"/>
-                <constraint firstAttribute="bottom" secondItem="6Im-ez-OTx" secondAttribute="bottom" constant="16" id="oUG-1F-ip4"/>
-                <constraint firstAttribute="trailing" secondItem="NNg-u4-bc2" secondAttribute="trailing" constant="20" id="orZ-aO-h0Q"/>
                 <constraint firstItem="snf-Ja-seM" firstAttribute="leading" secondItem="6Im-ez-OTx" secondAttribute="trailing" id="xH8-sq-bc3"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
@@ -87,7 +65,6 @@
                 <outlet property="arrowButton" destination="snf-Ja-seM" id="m8j-p5-8to"/>
                 <outlet property="contactsCollectionView" destination="6Im-ez-OTx" id="Xut-1u-Etb"/>
                 <outlet property="subtitleLabel" destination="Rkc-vj-8Hh" id="fh5-7U-SZJ"/>
-                <outlet property="titleLabel" destination="NNg-u4-bc2" id="aYa-6C-t0A"/>
             </connections>
             <point key="canvasLocation" x="-246.37681159420291" y="195.87053571428569"/>
         </view>
