--- a/Depo/LifeBox_Business/Presentation/UserStories/Others/PrivateShare/New Share/Views/Suggestions/PrivateShareContactSuggestionView.xib
+++ b/Depo/LifeBox_Business/Presentation/UserStories/Others/PrivateShare/New Share/Views/Suggestions/PrivateShareContactSuggestionView.xib
@@ -10,49 +10,24 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="PrivateShareContactSuggestionView" customModule="Billo" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="40"/>
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="PrivateShareContactSuggestionView" customModule="lifeBox_Business" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="tmO-pc-9rc">
-                    <rect key="frame" x="0.0" y="16" width="414" height="16"/>
-                    <subviews>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Wji-ww-wcm">
-                            <rect key="frame" x="0.0" y="0.0" width="414" height="16"/>
-                            <subviews>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dhl-EW-2px">
-                                    <rect key="frame" x="16" y="0.0" width="382" height="16"/>
-                                    <constraints>
-                                        <constraint firstAttribute="height" constant="16" id="9nW-BD-ER2"/>
-                                    </constraints>
-                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                    <nil key="textColor"/>
-                                    <nil key="highlightedColor"/>
-                                </label>
-                            </subviews>
-                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                            <constraints>
-                                <constraint firstAttribute="bottom" secondItem="dhl-EW-2px" secondAttribute="bottom" id="C8n-eY-JbJ"/>
-                                <constraint firstItem="dhl-EW-2px" firstAttribute="top" secondItem="Wji-ww-wcm" secondAttribute="top" id="Qpx-uv-lMd"/>
-                                <constraint firstAttribute="trailing" secondItem="dhl-EW-2px" secondAttribute="trailing" constant="16" id="Z57-Ka-TSC"/>
-                                <constraint firstItem="dhl-EW-2px" firstAttribute="leading" secondItem="Wji-ww-wcm" secondAttribute="leading" constant="16" id="q2R-GB-2aY"/>
-                            </constraints>
-                        </view>
-                    </subviews>
+                    <rect key="frame" x="15" y="8" width="384" height="28"/>
                 </stackView>
             </subviews>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstItem="tmO-pc-9rc" firstAttribute="trailing" secondItem="iN0-l3-epB" secondAttribute="trailing" id="3tg-yi-j0o"/>
-                <constraint firstItem="tmO-pc-9rc" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="16" id="Q9f-pz-NMb"/>
-                <constraint firstItem="tmO-pc-9rc" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="e8P-gs-fmf"/>
+                <constraint firstAttribute="trailing" secondItem="tmO-pc-9rc" secondAttribute="trailing" constant="15" id="3tg-yi-j0o"/>
+                <constraint firstItem="tmO-pc-9rc" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="8" id="Q9f-pz-NMb"/>
+                <constraint firstItem="tmO-pc-9rc" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="15" id="e8P-gs-fmf"/>
                 <constraint firstAttribute="bottom" secondItem="tmO-pc-9rc" secondAttribute="bottom" constant="8" id="nXn-Jl-NFq"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
-                <outlet property="itemsStackView" destination="tmO-pc-9rc" id="DIi-7K-Bgl"/>
-                <outlet property="nameLabel" destination="dhl-EW-2px" id="XIz-Og-Ggq"/>
-                <outlet property="nameView" destination="Wji-ww-wcm" id="eSI-7D-I8g"/>
+                <outlet property="contactFiledsStack" destination="tmO-pc-9rc" id="4F1-6q-JsE"/>
             </connections>
             <point key="canvasLocation" x="132" y="150"/>
         </view>
