--- a/Depo/LifeBox_Business/Presentation/UserStories/Others/PrivateShare/New Share/Views/Suggestions/PrivateShareSuggestionsView.xib
+++ b/Depo/LifeBox_Business/Presentation/UserStories/Others/PrivateShare/New Share/Views/Suggestions/PrivateShareSuggestionsView.xib
@@ -10,37 +10,37 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="PrivateShareSuggestionsView" customModule="Billo" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="157"/>
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="PrivateShareSuggestionsView" customModule="lifeBox_Business" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="414" height="162"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e59-w6-sq3">
-                    <rect key="frame" x="16" y="18" width="382" height="16"/>
+                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="FuO-bb-Qbz">
+                    <rect key="frame" x="0.0" y="0.0" width="414" height="162"/>
+                    <subviews>
+                        <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Wum-G6-3ua">
+                            <rect key="frame" x="0.0" y="-19" width="414" height="200"/>
+                        </stackView>
+                    </subviews>
                     <constraints>
-                        <constraint firstAttribute="height" constant="16" id="Yep-N7-f8q"/>
+                        <constraint firstAttribute="bottom" secondItem="Wum-G6-3ua" secondAttribute="bottom" id="H7s-sy-Ai0"/>
+                        <constraint firstAttribute="trailing" secondItem="Wum-G6-3ua" secondAttribute="trailing" id="NOI-8d-Xin"/>
+                        <constraint firstItem="Wum-G6-3ua" firstAttribute="top" secondItem="FuO-bb-Qbz" secondAttribute="top" id="Sod-Bl-R4C"/>
+                        <constraint firstItem="Wum-G6-3ua" firstAttribute="leading" secondItem="FuO-bb-Qbz" secondAttribute="leading" id="ywu-Gs-ASA"/>
+                        <constraint firstItem="Wum-G6-3ua" firstAttribute="width" secondItem="FuO-bb-Qbz" secondAttribute="width" id="z6U-TW-nWs"/>
                     </constraints>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <nil key="textColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="clO-20-k2C">
-                    <rect key="frame" x="0.0" y="34" width="414" height="123"/>
-                </stackView>
+                </scrollView>
             </subviews>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstItem="e59-w6-sq3" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="18" id="74T-Qi-oKG"/>
-                <constraint firstAttribute="trailing" secondItem="e59-w6-sq3" secondAttribute="trailing" constant="16" id="8dX-aX-7jw"/>
-                <constraint firstItem="e59-w6-sq3" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="16" id="AaE-GH-L3r"/>
-                <constraint firstAttribute="bottom" secondItem="clO-20-k2C" secondAttribute="bottom" id="EAb-4k-z5S"/>
-                <constraint firstItem="clO-20-k2C" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="HBC-53-dar"/>
-                <constraint firstItem="clO-20-k2C" firstAttribute="top" secondItem="e59-w6-sq3" secondAttribute="bottom" id="LCr-Ai-gco"/>
-                <constraint firstAttribute="trailing" secondItem="clO-20-k2C" secondAttribute="trailing" id="gd8-yD-TsI"/>
+                <constraint firstItem="FuO-bb-Qbz" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="6gB-eX-634"/>
+                <constraint firstItem="FuO-bb-Qbz" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="Pt5-p5-qQf"/>
+                <constraint firstAttribute="bottom" secondItem="FuO-bb-Qbz" secondAttribute="bottom" id="pGd-dj-2aj"/>
+                <constraint firstAttribute="trailing" secondItem="FuO-bb-Qbz" secondAttribute="trailing" id="t3I-U7-j4f"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
-                <outlet property="suggestionsView" destination="clO-20-k2C" id="8vx-HB-Ilo"/>
-                <outlet property="titleLabel" destination="e59-w6-sq3" id="ILA-fJ-ybh"/>
+                <outlet property="scrollableContent" destination="FuO-bb-Qbz" id="us0-a3-Z20"/>
+                <outlet property="suggestionsView" destination="Wum-G6-3ua" id="WbF-G7-jAk"/>
             </connections>
             <point key="canvasLocation" x="137.68115942028987" y="-155.02232142857142"/>
         </view>
