--- a/Depo/LifeBox_Business/Presentation/UserStories/Others/Upload/UploadProgressCell.xib
+++ b/Depo/LifeBox_Business/Presentation/UserStories/Others/Upload/UploadProgressCell.xib
@@ -38,6 +38,12 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ePs-cA-wVO">
+                        <rect key="frame" x="227" y="13.5" width="42" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zxh-b3-Ebf">
                         <rect key="frame" x="284" y="11" width="26" height="26"/>
                         <constraints>
@@ -49,12 +55,13 @@
                             <action selector="onRemoveTapped:" destination="gTV-IL-0wX" eventType="touchUpInside" id="mgX-FB-UvQ"/>
                         </connections>
                     </button>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ePs-cA-wVO">
-                        <rect key="frame" x="227" y="13.5" width="42" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Bu4-an-iEc">
+                        <rect key="frame" x="15" y="47" width="295" height="1"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="1" id="aA9-ZC-RIb"/>
+                        </constraints>
+                    </view>
                 </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
@@ -63,21 +70,25 @@
                 <constraint firstAttribute="bottom" secondItem="kZa-H2-1sA" secondAttribute="bottom" constant="15" id="4hz-r0-Sb6"/>
                 <constraint firstItem="Zxh-b3-Ebf" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="EKJ-cy-JOe"/>
                 <constraint firstAttribute="bottom" secondItem="SbU-u1-FdZ" secondAttribute="bottom" constant="11" id="FE4-xv-cfa"/>
+                <constraint firstAttribute="trailing" secondItem="Bu4-an-iEc" secondAttribute="trailing" constant="15" id="HZl-Pu-Se9"/>
                 <constraint firstItem="SGx-gv-Mx6" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="M0l-ZX-8f1"/>
                 <constraint firstItem="ePs-cA-wVO" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="Neo-3d-HVj"/>
                 <constraint firstItem="kZa-H2-1sA" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="15" id="Oga-yJ-R9K"/>
                 <constraint firstItem="Zxh-b3-Ebf" firstAttribute="leading" secondItem="ePs-cA-wVO" secondAttribute="trailing" constant="15" id="PRp-dg-22C"/>
                 <constraint firstItem="SGx-gv-Mx6" firstAttribute="leading" secondItem="kZa-H2-1sA" secondAttribute="trailing" constant="15" id="U5t-ae-mwQ"/>
                 <constraint firstItem="kZa-H2-1sA" firstAttribute="leading" secondItem="SbU-u1-FdZ" secondAttribute="trailing" constant="14" id="acH-3v-wc1"/>
+                <constraint firstItem="Bu4-an-iEc" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="15" id="agz-Wx-BcJ"/>
                 <constraint firstItem="SbU-u1-FdZ" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="15" id="cUd-iN-KmO"/>
                 <constraint firstItem="SbU-u1-FdZ" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="11" id="fwu-dK-2Ta"/>
                 <constraint firstItem="ePs-cA-wVO" firstAttribute="leading" secondItem="SGx-gv-Mx6" secondAttribute="trailing" constant="8" id="lGY-Op-Zu2"/>
+                <constraint firstAttribute="bottom" secondItem="Bu4-an-iEc" secondAttribute="bottom" id="lsO-uQ-qFz"/>
             </constraints>
             <connections>
                 <outlet property="fileName" destination="SGx-gv-Mx6" id="8b3-hT-ynJ"/>
                 <outlet property="fileSize" destination="ePs-cA-wVO" id="Qen-5U-hml"/>
                 <outlet property="progressStatusView" destination="SbU-u1-FdZ" id="iAT-Ai-fhQ"/>
                 <outlet property="removeButton" destination="Zxh-b3-Ebf" id="8Dx-84-U0T"/>
+                <outlet property="separator" destination="Bu4-an-iEc" id="tO3-28-Ibd"/>
                 <outlet property="thumbnail" destination="kZa-H2-1sA" id="YZr-If-vpZ"/>
             </connections>
             <point key="canvasLocation" x="-15.217391304347828" y="63.616071428571423"/>
