--- a/Depo/LifeBox_Business/Presentation/SubViews/CustomTabBars/TabBarView.xib
+++ b/Depo/LifeBox_Business/Presentation/SubViews/CustomTabBars/TabBarView.xib
@@ -34,8 +34,15 @@
                             <rect key="frame" x="0.0" y="0.0" width="414" height="802"/>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         </view>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Lsf-iA-MoG">
+                            <rect key="frame" x="15" y="59" width="49" height="30"/>
+                            <state key="normal" title="Upload"/>
+                            <connections>
+                                <action selector="tempUploadStart:" destination="-1" eventType="touchUpInside" id="3gz-f5-j5Z"/>
+                            </connections>
+                        </button>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gxz-1O-hIp" customClass="UploadProgressView" customModule="lifeBox_Business" customModuleProvider="target">
-                            <rect key="frame" x="0.0" y="896" width="414" height="0.0"/>
+                            <rect key="frame" x="0.0" y="802" width="414" height="0.0"/>
                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             <constraints>
                                 <constraint firstAttribute="height" id="avF-El-1x1"/>
@@ -69,11 +76,13 @@
                         <constraint firstAttribute="trailing" secondItem="i0i-at-wPy" secondAttribute="trailing" id="NOK-Ih-oLn"/>
                         <constraint firstItem="ero-vK-F2b" firstAttribute="bottom" secondItem="Pdh-iF-uTx" secondAttribute="bottom" id="Nv2-yE-i9E"/>
                         <constraint firstItem="ero-vK-F2b" firstAttribute="trailing" secondItem="gxz-1O-hIp" secondAttribute="trailing" id="hxk-7z-Xx9"/>
+                        <constraint firstItem="Lsf-iA-MoG" firstAttribute="leading" secondItem="ero-vK-F2b" secondAttribute="leading" constant="15" id="i4I-d3-deQ"/>
                         <constraint firstAttribute="trailing" secondItem="Pdh-iF-uTx" secondAttribute="trailing" id="iee-hk-ssn"/>
                         <constraint firstItem="gxz-1O-hIp" firstAttribute="leading" secondItem="ero-vK-F2b" secondAttribute="leading" id="j0G-2e-cWg"/>
                         <constraint firstItem="W0f-ko-odc" firstAttribute="top" secondItem="i0i-at-wPy" secondAttribute="bottom" id="rlX-hu-WYO"/>
                         <constraint firstItem="Pdh-iF-uTx" firstAttribute="leading" secondItem="FJl-Cl-AGP" secondAttribute="leading" id="uSv-rF-MBk"/>
-                        <constraint firstAttribute="bottom" secondItem="gxz-1O-hIp" secondAttribute="bottom" id="yYv-UQ-NGV"/>
+                        <constraint firstItem="Pdh-iF-uTx" firstAttribute="top" secondItem="gxz-1O-hIp" secondAttribute="bottom" id="yYv-UQ-NGV"/>
+                        <constraint firstItem="Lsf-iA-MoG" firstAttribute="top" secondItem="ero-vK-F2b" secondAttribute="top" constant="15" id="zBg-ps-lP9"/>
                     </constraints>
                 </view>
             </subviews>
