--- a/Depo/LifeBox_Business/Presentation/UserStories/Others/Upload/UploadProgressView.xib
+++ b/Depo/LifeBox_Business/Presentation/UserStories/Others/Upload/UploadProgressView.xib
@@ -4,7 +4,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18092"/>
-        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -13,7 +12,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="UploadProgressView" customModule="lifeBox_Business" customModuleProvider="target">
             <connections>
                 <outlet property="collectionView" destination="yPQ-S0-5x5" id="Oac-e0-F6s"/>
-                <outlet property="progressBarHeader" destination="8aj-bR-Nyx" id="OZZ-wk-aJ0"/>
+                <outlet property="progressHeaderContainer" destination="8aj-bR-Nyx" id="GoI-Ih-jl4"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -23,19 +22,8 @@
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8aj-bR-Nyx">
                     <rect key="frame" x="0.0" y="0.0" width="414" height="50"/>
-                    <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cIH-gk-VcF">
-                            <rect key="frame" x="20" y="14.5" width="42" height="21"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                            <nil key="textColor"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                    </subviews>
-                    <color key="backgroundColor" name="confirmationPopupTitle"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="50" id="8QN-4T-Kwp"/>
-                        <constraint firstItem="cIH-gk-VcF" firstAttribute="leading" secondItem="8aj-bR-Nyx" secondAttribute="leading" constant="20" id="aAV-3k-FOj"/>
-                        <constraint firstItem="cIH-gk-VcF" firstAttribute="centerY" secondItem="8aj-bR-Nyx" secondAttribute="centerY" id="qEH-Ga-4kv"/>
                     </constraints>
                 </view>
                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="yPQ-S0-5x5">
@@ -65,9 +53,6 @@
         </view>
     </objects>
     <resources>
-        <namedColor name="confirmationPopupTitle">
-            <color red="0.25098039215686274" green="0.32156862745098042" blue="0.38039215686274508" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
